--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,421 @@
 .page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+    min-width: 1100px;
+    /* мы ещё не умеем делать мобильную версию сайта, */
+    /* поэтому выше установлена минимальная ширина страницы */
+    max-width: 1600px;
+    /* выше установили ограничение по максимальной ширине */
+    margin: 0 auto;
+    /* выше для экранов больше 1600px отцентрировали весь контент */
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 .header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
+    height: 100vh;
+    min-height: 600px;
+    max-height: 756px;
+    background-color: #F2F2F2;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
+.link {
+    text-decoration: none;
+}
+
+.logo {
+    z-index: 4;
+    display: flex;
+    height: 32px;
+    width: 183px;
+}
+
+
+/* выше установили ограничения для секции */
+
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+
+.logo_place_header {
+    position: absolute;
+    margin-left: 64px;
+    top: 30px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+.header__link {
+    color: #2f80ed;
 }
+
+.header__tittle {
+    width: 730px;
+    font-size: 102px;
+    margin-left: 64px;
+    line-height: 96px;
+    z-index: 5;
+    font-weight: bold;
+}
+
+.header__subtittle {
+    z-index: 4;
+    width: 388px;
+    position: absolute;
+    margin: 0;
+    bottom: 30px;
+    left: 64px;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: normal;
+}
+
+.header__main-illustration {
+    height: 608px;
+    width: 765px;
+    z-index: 2;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.header__square-pic {
+    height: 568px;
+    width: 568px;
+    z-index: 1;
+    position: absolute;
+    background-color: #2f80ed;
+    top: 54px;
+    right: 0;
+}
+
+
+/*тут заканчивается header*/
+
+
+/*тут начианется description*/
+
+.description {
+    display: flex;
+    background-color: white;
+}
+
+.description__two-columns {
+    margin: 100px auto 0 auto;
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.description__brief {
+    width: 175px;
+    margin: 0;
+}
+
+.description__main-text {
+    width: 80%;
+    min-width: 784px;
+}
+
+.description__brief {
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: normal;
+    color: #2f80ed;
+}
+
+.description__paragraph {
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: normal;
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+.description__paragraph:last-child {
+    margin-bottom: 0;
+}
+
+.description__span {
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: bold;
+}
+
+
+/*тут заканчивается description*/
+
+
+/*тут начианется digits*/
+
+.digits {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    align-items: center;
+}
+
+.section-title {
+    font-size: 60px;
+    line-height: 1.15;
+    font-weight: bold;
+    display: flex;
+    width: 60%;
+    margin: 0;
+    margin-top: 100px;
+    justify-content: center;
+}
+
+.section-subtitle {
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: normal;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    margin-top: 20px;
+}
+
+.table {
+    width: 1100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: auto;
+    margin-bottom: 100px;
+}
+
+.table__heading {
+    margin: 0;
+    font-size: 24px;
+    line-height: 1.15;
+    font-weight: bold;
+}
+
+.table__cell {
+    width: 250px;
+    margin-top: 60px;
+}
+
+.table__text {
+    margin: 0;
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: normal;
+}
+
+
+/*тут заканчивается digits*/
+
+
+/*тут начианется feynman*/
+
+.feynman {
+    display: flex;
+    flex-direction: column;
+    background-color: #F2F2F2;
+    position: relative;
+    height: 890px;
+}
+
+.feynman__title {
+    width: 648px;
+    font-size: 120px;
+    line-height: 1.15;
+    font-weight: bold;
+    margin: 100px auto 0 auto;
+    text-align: center;
+    z-index: 1;
+}
+
+.feynman__subtitle {
+    margin: 70px 0 0 0;
+    font-size: 36px;
+    line-height: 51px;
+    font-weight: normal;
+    margin: 70px auto auto auto;
+    z-index: 1;
+}
+
+.feynman__link {
+    position: absolute;
+    right: 48px;
+    top: 50%;
+    font-size: 36px;
+    line-height: 51px;
+    font-weight: normal;
+    color: #2f80ed;
+}
+
+.feynman__bg-image {
+    background-image: url(../images/feynman.png);
+    width: 867px;
+    height: 637px;
+    z-index: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+}
+
+
+/*тут заканчивается feynman*/
+
+
+/*тут начианется kaufman*/
+
+.kaufman {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f1f1f;
+    align-items: center;
+    z-index: 2;
+    position: relative;
+    overflow: hidden;
+}
+
+.kaufman__triangle {
+    background-image: url(../images/kaufman-triangle.svg);
+    position: absolute;
+    top: 0;
+    right: -210px;
+    width: 877px;
+    height: 877px;
+    background-size: cover;
+    z-index: 1;
+}
+
+
+/* и элемента с модификатором вида ключ-значение */
+
+.table__cell_theme_dark {
+    width: 200px;
+    color: white;
+    margin-right: 0;
+    margin-top: 80px;
+    z-index: 2;
+}
+
+.section-title_theme_dark {
+    color: white;
+    margin-top: 90px;
+    z-index: 2;
+    font-size: 60px;
+    line-height: 1.15;
+    font-weight: bold;
+}
+
+.section-subtitle_theme_dark {
+    color: white;
+    z-index: 2;
+}
+
+
+/*тут заканчивается kaufman*/
+
+
+/*тут начианется footer*/
+
+.footer {
+    background-color: #1f1f1f;
+    color: white;
+    padding-top: 60px;
+    padding-bottom: 40px;
+    min-height: 350px;
+    position: relative;
+}
+
+.footer__columns {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+}
+
+.footer__column {
+    display: flex;
+}
+
+.footer__column-heading {
+    margin: 0;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer__column_content_copyright {
+    flex-basis: 711px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer__column_content_info {
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer__column_content_social {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: left;
+}
+
+.logo_place_footer {
+    width: 183px;
+    height: 35px;
+}
+
+.footer__author {
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: normal;
+    position: absolute;
+    bottom: 40px;
+    left: 0 auto;
+}
+
+.footer__link {
+    color: white;
+    margin: 0;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.footer__link_to-right {
+    margin-left: 10px;
+}
+
+.footer__column-links {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 16px;
+    padding-left: 0;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.footer__social-icon {
+    margin: 0;
+    width: 16px;
+    height: 16px;
+}
+
+
+/*тут начианется footer
+nav,
+li,
+div,
+h2,
+h3,
+h1,
+h4,
+p,
+a {
+    border: 2px solid red;
+}*/
