--- a/styles/style.css
+++ b/styles/style.css
@@ -105,10 +105,6 @@
     width: 80%;
 }
 
-.description__brief {
-    width: 175px;
-    margin: 0;
-}
 
 .description__main-text {
     width: 80%;
@@ -116,6 +112,8 @@
 }
 
 .description__brief {
+    width: 175px;
+    margin: 0;
     font-size: 18px;
     line-height: 1.2;
     font-weight: normal;
@@ -233,7 +231,8 @@
     font-size: 36px;
     line-height: 51px;
     font-weight: normal;
-    margin: 70px auto auto auto;
+    margin: 0 auto;
+    margin-top: 70px;
     z-index: 1;
 }
 
@@ -331,6 +330,7 @@
     display: flex;
     height: 100%;
     justify-content: space-between;
+    
 }
 
 .footer__column {
@@ -346,19 +346,25 @@
 
 .footer__column_content_copyright {
     flex-basis: 711px;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
+    
+     
 }
 
 .footer__column_content_info {
     flex-direction: column;
     justify-content: space-between;
+    
+    
 }
 
 .footer__column_content_social {
     flex-direction: column;
     justify-content: space-between;
-    align-items: left;
+    
 }
 
 .logo_place_footer {
@@ -367,12 +373,16 @@
 }
 
 .footer__author {
+   
+    position: absolute;
     font-size: 18px;
     line-height: 25px;
     font-weight: normal;
-    position: absolute;
     bottom: 40px;
-    left: 0 auto;
+    left: auto;
+    
+    
+    
 }
 
 .footer__link {
