--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@
 
 .logo_place_header {
     position: absolute;
-    margin-left: 64px;
+    left: 64px;
     top: 30px;
 }
 
@@ -47,16 +47,17 @@
     color: #2f80ed;
 }
 
-.header__tittle {
+.header__title {
     width: 730px;
     font-size: 102px;
+    margin: 0;
     margin-left: 64px;
     line-height: 96px;
     z-index: 5;
     font-weight: bold;
 }
 
-.header__subtittle {
+.header__subtitle {
     z-index: 4;
     width: 388px;
     position: absolute;
@@ -98,20 +99,19 @@
     background-color: white;
 }
 
-.description__two-columns {
+.two-columns {
     margin: 100px auto 0 auto;
     display: flex;
     justify-content: space-between;
     width: 80%;
 }
 
-
-.description__main-text {
+.two-columns__main-text {
     width: 80%;
     min-width: 784px;
 }
 
-.description__brief {
+.two-columns__brief {
     width: 175px;
     margin: 0;
     font-size: 18px;
@@ -120,7 +120,7 @@
     color: #2f80ed;
 }
 
-.description__paragraph {
+.two-columns__paragraph {
     font-size: 24px;
     line-height: 34px;
     font-weight: normal;
@@ -128,11 +128,11 @@
     margin-bottom: 30px;
 }
 
-.description__paragraph:last-child {
+.two-columns__paragraph:last-child {
     margin-bottom: 0;
 }
 
-.description__span {
+.two-columns__span-accent {
     font-size: 24px;
     line-height: 34px;
     font-weight: bold;
@@ -208,12 +208,30 @@
 
 /*тут начианется feynman*/
 
+
+/*
+.feynman__bg-image {
+    background-image: url(../images/feynman.png);
+    width: 867px;
+    height: 637px;
+    z-index: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+}
+*/
+
 .feynman {
     display: flex;
     flex-direction: column;
     background-color: #F2F2F2;
+    background-image: url(../images/feynman.png);
+    background-size: 867px 637px;
+    background-position: bottom 0 left 0;
+    min-height: 890px;
+    background-repeat: no-repeat;
     position: relative;
-    height: 890px;
 }
 
 .feynman__title {
@@ -227,7 +245,7 @@
 }
 
 .feynman__subtitle {
-   font-size: 36px;
+    font-size: 36px;
     line-height: 51px;
     font-weight: normal;
     margin: 0 auto;
@@ -243,17 +261,6 @@
     line-height: 51px;
     font-weight: normal;
     color: #2f80ed;
-}
-
-.feynman__bg-image {
-    background-image: url(../images/feynman.png);
-    width: 867px;
-    height: 637px;
-    z-index: 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-size: cover;
 }
 
 
@@ -320,7 +327,7 @@
     padding-top: 60px;
     padding-bottom: 40px;
     min-height: 350px;
-    position: relative;
+    box-sizing: border-box;
 }
 
 .footer__columns {
@@ -329,7 +336,6 @@
     display: flex;
     height: 100%;
     justify-content: space-between;
-    
 }
 
 .footer__column {
@@ -344,26 +350,21 @@
 }
 
 .footer__column_content_copyright {
+    min-height: 350px;
     flex-basis: 711px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
-    
-     
 }
 
 .footer__column_content_info {
     flex-direction: column;
-    justify-content: space-between;
-    
-    
+    justify-content: flex-start;
 }
 
 .footer__column_content_social {
     flex-direction: column;
-    justify-content: space-between;
-    
+    justify-content: flex-start;
 }
 
 .logo_place_footer {
@@ -372,28 +373,18 @@
 }
 
 .footer__author {
-   
-    position: absolute;
     font-size: 18px;
     line-height: 25px;
     font-weight: normal;
-    bottom: 40px;
-    left: auto;
-    
-    
-    
+    margin-bottom: 18px;
 }
 
-.footer__link {
+.footer__column-link {
     color: white;
     margin: 0;
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
-}
-
-.footer__link_to-right {
-    margin-left: 10px;
 }
 
 .footer__column-links {
@@ -413,18 +404,5 @@
     margin: 0;
     width: 16px;
     height: 16px;
+    margin-right: 10px;
 }
-
-
-/*тут начианется footer
-nav,
-li,
-div,
-h2,
-h3,
-h1,
-h4,
-p,
-a {
-    border: 2px solid red;
-}*/
