--- a/styles/style.css
+++ b/styles/style.css
@@ -9,19 +9,14 @@
     font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header {
-    height: 100vh;
-    min-height: 600px;
-    max-height: 756px;
-    background-color: #F2F2F2;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
 .link {
     text-decoration: none;
+    list-style: none;
+}
+
+.link:hover {
+    transition: ease 0.5s;
+    opacity: 50%;
 }
 
 .logo {
@@ -101,7 +96,7 @@
 }
 
 .two-columns {
-    margin: 100px auto 0 auto;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     width: 80%;
@@ -294,6 +289,10 @@
 
 /* и элемента с модификатором вида ключ-значение */
 
+.table_theme_dark {
+    margin-bottom: 90px;
+}
+
 .table__cell_theme_dark {
     width: 200px;
     color: white;
@@ -407,4 +406,215 @@
     width: 16px;
     height: 16px;
     margin-right: 10px;
+}
+
+
+/*тут заканчивается footer*/
+
+
+/*тут временно напишу стили для новых блоков*/
+
+
+/*тут keyframes*/
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.rotation {
+    animation: rotation 20s linear infinite;
+}
+
+
+/*тут начинанется techniques*/
+
+.techniques {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.cards {
+    width: 920px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.cards__item {
+    width: 240px;
+    margin-right: 100px;
+    text-align: center;
+}
+
+.cards__title {
+    margin: 0 auto;
+    margin-bottom: 16px;
+    line-height: 1.15;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.cards__item:nth-child(3) {
+    margin-right: 0px;
+}
+
+.cards__image {
+    width: 160px;
+    height: 160px;
+    margin: 60px 40px 43px 40px;
+    border-radius: 50%;
+}
+
+.cards__description {
+    line-height: 23px;
+    font-size: 18px;
+    font-weight: normal;
+    margin: 0 auto;
+}
+
+
+/*тут заканчивается techniques*/
+
+
+/*тут начинанется video*/
+
+.video {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: -60px;
+}
+
+.video__iframes {
+    margin: 50px auto 0;
+}
+
+.video__iframe {
+    border-style: none;
+    margin-right: 20px;
+}
+
+.video__iframe:last-child {
+    margin-right: 0;
+}
+
+
+/*тут заканчивается video*/
+
+
+/*тут начинанется .oakley*/
+
+.oakley {
+    background-color: #F2F2F2;
+    padding-top: 160px;
+}
+
+
+/*тут заканчивается .oakley*/
+
+
+/*тут начинанется resources*/
+
+.resources {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.resources__logo-zone {
+    margin: 80px auto 217px;
+    width: 1100px;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    list-style: none;
+}
+
+.resources__logo {
+    width: 270px;
+    height: 38px;
+}
+
+
+/*тут заканчивается resources*/
+
+
+/*тут начинанется khan*/
+
+.khan {
+    width: 100%;
+    background-color: #F2F2F2;
+}
+
+.khan__container {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 105px;
+}
+
+.khan__author {
+    line-height: 42px;
+    font-size: 30px;
+    font-weight: normal;
+    margin: 0 auto;
+}
+
+.khan__title {
+    line-height: 1.15;
+    font-size: 60px;
+    font-weight: bold;
+    margin: 0 auto 50px;
+}
+
+.khan__quote {
+    width: 790px;
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 0;
+    ;
+}
+
+.khan__quote-author {
+    line-height: 1.15;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 36px auto 10px;
+}
+
+.khan__quote-author-subline {
+    line-height: 1.15;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 0 auto;
+}
+
+.khan__book-container {
+    margin-top: 68px;
+}
+
+.khan__book-pic {
+    width: 620px;
+    height: 608px;
+    object-fit: cover;
+    margin-right: 48px;
+    object-position: 0 0;
+}
+
+.khan__buy-link {
+    line-height: 42px;
+    font-size: 30px;
+    font-weight: normal;
+    color: #2f80ed;
+    vertical-align: top;
 }
