--- a/styles/blocks/video/video.css
+++ b/styles/blocks/video/video.css
@@ -1,6 +1,4 @@
-﻿@import url('./__iframes/video__iframes.css');
-@import url('./__iframe/video__iframe.css');
-.video {
+﻿.video {
     display: flex;
     flex-direction: column;
     align-items: center;
