--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,11 @@
 /* подлючаю блок header */
 
 @import url('../styles/blocks/header/header.css');
+@import url('../styles/blocks/header/__link/header__link.css');
+@import url('../styles/blocks/header/__title/header__title.css');
+@import url('../styles/blocks/header/__subtitle/header__subtitle.css');
+@import url('../styles/blocks/header/__main-illustration/header__main-illustration.css');
+@import url('../styles/blocks/header/__square-pic/header__square-pic.css');
 
 /* подлючаю блок description */
 
@@ -24,6 +29,8 @@
 /* подлючаю блок video */
 
 @import url('../styles/blocks/video/video.css');
+@import url('../styles/blocks/video/__iframes/video__iframes.css');
+@import url('../styles/blocks/video/__iframe/video__iframe.css');
 
 /* подлючаю блок oakley */
 
@@ -32,6 +39,9 @@
 /* подлючаю блок feynman */
 
 @import url('../styles/blocks/feynman/feynman.css');
+@import url('../styles/blocks/feynman/__title/feynman__title.css');
+@import url('../styles/blocks/feynman/__subtitle/feynman__subtitle.css');
+@import url('../styles/blocks/feynman/__link/feynman__link.css');
 
 /* подлючаю блок digits */
 
@@ -40,30 +50,64 @@
 /* подлючаю блок khan */
 
 @import url('../styles/blocks/khan/khan.css');
+@import url('../styles/blocks/khan/__container/khan__container.css');
+@import url('../styles/blocks/khan/__author/khan__author.css');
+@import url('../styles/blocks/khan/__title/khan__title.css');
+@import url('../styles/blocks/khan/__quote/khan__quote.css');
+@import url('../styles/blocks/khan/__quote-author/khan__quote-author.css');
+@import url('../styles/blocks/khan/__quote-author-subline/khan__quote-author-subline.css');
+@import url('../styles/blocks/khan/__book-container/khan__book-container.css');
+@import url('../styles/blocks/khan/__book-pic/khan__book-pic.css');
+@import url('../styles/blocks/khan/__buy-link/khan__buy-link.css');
 
 /* подлючаю блок kaufman */
 
 @import url('../styles/blocks/kaufman/kaufman.css');
+@import url('../styles/blocks/kaufman/__triangle/kaufman__triangle.css');
 
 /* подлючаю блок resources */
 
 @import url('../styles/blocks/resources/resources.css');
+@import url('../styles/blocks/resources/__logo-zone/resources__logo-zone.css');
+@import url('../styles/blocks/resources/__logo/resources__logo.css');
 
 /* подлючаю блок footer */
 
 @import url('../styles/blocks/footer/footer.css');
+@import url('../styles/blocks/footer/__columns/footer__columns.css');
+@import url('../styles/blocks/footer/__column/footer__column.css');
+@import url('../styles/blocks/footer/__column-heading/footer__column-heading.css');
+@import url('../styles/blocks/footer/__column_content_copyright/footer__column_content_copyright.css');
+@import url('../styles/blocks/footer/__column_content_info/footer__column_content_info.css');
+@import url('../styles/blocks/footer/__column_content_social/footer__column_content_social.css');
+@import url('../styles/blocks/footer/__column-link/footer__column-link.css');
+@import url('../styles/blocks/footer/__column-links/footer__column-links.css');
+@import url('../styles/blocks/footer/__social-icon/footer__social-icon.css');
 
 /* подлючаю переиспользуемый блок two-columns */
 
 @import url('../styles/blocks/two-columns/two-columns.css');
+@import url('../styles/blocks/two-columns/__main-text/two-columns__main-text.css');
+@import url('../styles/blocks/two-columns/__brief/two-columns__brief.css');
+@import url('../styles/blocks/two-columns/__paragraph/two-columns__paragraph.css');
+@import url('../styles/blocks/two-columns/__span-accent/two-columns__span-accent.css');
 
 /* подлючаю переиспользуемый блок table */
 
 @import url('../styles/blocks/table/table.css');
+@import url('../styles/blocks/table/__heading/table__heading.css');
+@import url('../styles/blocks/table/__cell/table__cell.css');
+@import url('../styles/blocks/table/__cell/_theme/table__cell_theme_dark.css');
+@import url('../styles/blocks/table/__text/table__text.css');
+@import url('../styles/blocks/table/_theme/table_theme_dark.css');
 
 /* подлючаю переиспользуемый блок cards */
 
 @import url('../styles/blocks/cards/cards.css');
+@import url('../styles/blocks/cards/__item/cards__item.css');
+@import url('../styles/blocks/cards/__title/cards__title.css');
+@import url('../styles/blocks/cards/__image/cards__image.css');
+@import url('../styles/blocks/cards/__description/cards__description.css');
 
 /* подлючаю переиспользуемый микс link */
 
@@ -72,10 +116,12 @@
 /* подлючаю переиспользуемый блок section-title */
 
 @import url('../styles/blocks/section-title/section-title.css');
+@import url('../styles/blocks/section-title/_theme/section-title_theme_dark.css');
 
 /* подлючаю переиспользуемый блок section-subtitle */
 
 @import url('../styles/blocks/section-subtitle/section-subtitle.css');
+@import url('../styles/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css');
 
 /* подлючаю переиспользуемый микс rotation */
 
@@ -84,3 +130,5 @@
 /* подлючаю переиспользуемый микс logo */
 
 @import url('../styles/blocks/logo/logo.css');
+@import url('../styles/blocks/logo/_place/logo_place_header.css');
+@import url('../styles/blocks/logo/_place/logo_place_footer.css');
