--- a/styles/blocks/feynman/feynman.css
+++ b/styles/blocks/feynman/feynman.css
@@ -1,7 +1,4 @@
-﻿@import url('./__title/feynman__title.css');
-@import url('./__subtitle/feynman__subtitle.css');
-@import url('./__link/feynman__link.css');
-.feynman {
+﻿.feynman {
     display: flex;
     flex-direction: column;
     background-color: #F2F2F2;
