--- a/styles/blocks/kaufman/kaufman.css
+++ b/styles/blocks/kaufman/kaufman.css
@@ -1,5 +1,4 @@
-﻿@import url('./__triangle/kaufman__triangle.css');
-.kaufman {
+﻿.kaufman {
     display: flex;
     flex-direction: column;
     background-color: #1f1f1f;
