--- a/styles/blocks/logo/logo.css
+++ b/styles/blocks/logo/logo.css
@@ -1,7 +1,4 @@
-﻿@import url('./_place/logo_place_header.css');
-@import url('./_place/logo_place_footer.css');
-.logo {
+﻿.logo {
     z-index: 4;
     display: flex;
-    ;
 }
