--- a/styles/blocks/resources/resources.css
+++ b/styles/blocks/resources/resources.css
@@ -1,6 +1,4 @@
-﻿@import url('./__logo-zone/resources__logo-zone.css');
-@import url('./__logo/resources__logo.css');
-.resources {
+﻿.resources {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
