--- a/styles/blocks/section-subtitle/section-subtitle.css
+++ b/styles/blocks/section-subtitle/section-subtitle.css
@@ -1,5 +1,4 @@
-﻿@import url('./_theme/section-subtitle_theme_dark.css');
-.section-subtitle {
+﻿.section-subtitle {
     font-size: 24px;
     line-height: 34px;
     font-weight: normal;
