--- a/styles/blocks/section-title/section-title.css
+++ b/styles/blocks/section-title/section-title.css
@@ -1,5 +1,4 @@
-﻿@import url('./_theme/section-title_theme_dark.css');
-.section-title {
+﻿.section-title {
     font-size: 60px;
     line-height: 1.15;
     font-weight: bold;
