--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: #F2F2F2;
-    background-image: url(../../../images/feynman.png);
+    background-image: url(../../images/feynman.png);
     background-size: 867px 637px;
     background-position: bottom 0 left 0;
     min-height: 890px;
