--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -4,7 +4,6 @@
     z-index: 1;
     position: absolute;
     background-color: #2f80ed;
-    top: 0;
+    top: 64px;
     right: 0;
-    margin-top: 64px;
 }
