--- a/pages/index.css
+++ b/pages/index.css
@@ -7,128 +7,128 @@
 
 /* подлючаю cтили обертки блоков page */
 
-@import url('../styles/blocks/page/page.css');
+@import url('../blocks/page/page.css');
 
 /* подлючаю блок header */
 
-@import url('../styles/blocks/header/header.css');
-@import url('../styles/blocks/header/__link/header__link.css');
-@import url('../styles/blocks/header/__title/header__title.css');
-@import url('../styles/blocks/header/__subtitle/header__subtitle.css');
-@import url('../styles/blocks/header/__main-illustration/header__main-illustration.css');
-@import url('../styles/blocks/header/__square-pic/header__square-pic.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/header/__link/header__link.css');
+@import url('../blocks/header/__title/header__title.css');
+@import url('../blocks/header/__subtitle/header__subtitle.css');
+@import url('../blocks/header/__main-illustration/header__main-illustration.css');
+@import url('../blocks/header/__square-pic/header__square-pic.css');
 
 /* подлючаю блок description */
 
-@import url('../styles/blocks/description/description.css');
+@import url('../blocks/description/description.css');
 
 /* подлючаю блок techniques */
 
-@import url('../styles/blocks/techniques/techniques.css');
+@import url('../blocks/techniques/techniques.css');
 
 /* подлючаю блок video */
 
-@import url('../styles/blocks/video/video.css');
-@import url('../styles/blocks/video/__iframes/video__iframes.css');
-@import url('../styles/blocks/video/__iframe/video__iframe.css');
+@import url('../blocks/video/video.css');
+@import url('../blocks/video/__iframes/video__iframes.css');
+@import url('../blocks/video/__iframe/video__iframe.css');
 
 /* подлючаю блок oakley */
 
-@import url('../styles/blocks/oakley/oakley.css');
+@import url('../blocks/oakley/oakley.css');
 
 /* подлючаю блок feynman */
 
-@import url('../styles/blocks/feynman/feynman.css');
-@import url('../styles/blocks/feynman/__title/feynman__title.css');
-@import url('../styles/blocks/feynman/__subtitle/feynman__subtitle.css');
-@import url('../styles/blocks/feynman/__link/feynman__link.css');
+@import url('../blocks/feynman/feynman.css');
+@import url('../blocks/feynman/__title/feynman__title.css');
+@import url('../blocks/feynman/__subtitle/feynman__subtitle.css');
+@import url('../blocks/feynman/__link/feynman__link.css');
 
 /* подлючаю блок digits */
 
-@import url('../styles/blocks/digits/digits.css');
+@import url('../blocks/digits/digits.css');
 
 /* подлючаю блок khan */
 
-@import url('../styles/blocks/khan/khan.css');
-@import url('../styles/blocks/khan/__container/khan__container.css');
-@import url('../styles/blocks/khan/__author/khan__author.css');
-@import url('../styles/blocks/khan/__title/khan__title.css');
-@import url('../styles/blocks/khan/__quote/khan__quote.css');
-@import url('../styles/blocks/khan/__quote-author/khan__quote-author.css');
-@import url('../styles/blocks/khan/__quote-author-subline/khan__quote-author-subline.css');
-@import url('../styles/blocks/khan/__book-container/khan__book-container.css');
-@import url('../styles/blocks/khan/__book-pic/khan__book-pic.css');
-@import url('../styles/blocks/khan/__buy-link/khan__buy-link.css');
+@import url('../blocks/khan/khan.css');
+@import url('../blocks/khan/__container/khan__container.css');
+@import url('../blocks/khan/__author/khan__author.css');
+@import url('../blocks/khan/__title/khan__title.css');
+@import url('../blocks/khan/__quote/khan__quote.css');
+@import url('../blocks/khan/__quote-author/khan__quote-author.css');
+@import url('../blocks/khan/__quote-author-subline/khan__quote-author-subline.css');
+@import url('../blocks/khan/__book-container/khan__book-container.css');
+@import url('../blocks/khan/__book-pic/khan__book-pic.css');
+@import url('../blocks/khan/__buy-link/khan__buy-link.css');
 
 /* подлючаю блок kaufman */
 
-@import url('../styles/blocks/kaufman/kaufman.css');
-@import url('../styles/blocks/kaufman/__triangle/kaufman__triangle.css');
+@import url('../blocks/kaufman/kaufman.css');
+@import url('../blocks/kaufman/__triangle/kaufman__triangle.css');
 
 /* подлючаю блок resources */
 
-@import url('../styles/blocks/resources/resources.css');
-@import url('../styles/blocks/resources/__logo-zone/resources__logo-zone.css');
-@import url('../styles/blocks/resources/__logo/resources__logo.css');
+@import url('../blocks/resources/resources.css');
+@import url('../blocks/resources/__logo-zone/resources__logo-zone.css');
+@import url('../blocks/resources/__logo/resources__logo.css');
 
 /* подлючаю блок footer */
 
-@import url('../styles/blocks/footer/footer.css');
-@import url('../styles/blocks/footer/__columns/footer__columns.css');
-@import url('../styles/blocks/footer/__column/footer__column.css');
-@import url('../styles/blocks/footer/__column-heading/footer__column-heading.css');
-@import url('../styles/blocks/footer/__column_content_copyright/footer__column_content_copyright.css');
-@import url('../styles/blocks/footer/__column_content_info/footer__column_content_info.css');
-@import url('../styles/blocks/footer/__column_content_social/footer__column_content_social.css');
-@import url('../styles/blocks/footer/__column-link/footer__column-link.css');
-@import url('../styles/blocks/footer/__column-links/footer__column-links.css');
-@import url('../styles/blocks/footer/__social-icon/footer__social-icon.css');
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__columns/footer__columns.css');
+@import url('../blocks/footer/__column/footer__column.css');
+@import url('../blocks/footer/__column-heading/footer__column-heading.css');
+@import url('../blocks/footer/__column/_content/footer__column_content_copyright.css'); 
+@import url('../blocks/footer/__column/_content/footer__column_content_info.css'); 
+@import url('../blocks/footer/__column/_content/footer__column_content_social.css'); 
+@import url('../blocks/footer/__column-link/footer__column-link.css');
+@import url('../blocks/footer/__column-links/footer__column-links.css');
+@import url('../blocks/footer/__social-icon/footer__social-icon.css');
 
 /* подлючаю переиспользуемый блок two-columns */
 
-@import url('../styles/blocks/two-columns/two-columns.css');
-@import url('../styles/blocks/two-columns/__main-text/two-columns__main-text.css');
-@import url('../styles/blocks/two-columns/__brief/two-columns__brief.css');
-@import url('../styles/blocks/two-columns/__paragraph/two-columns__paragraph.css');
-@import url('../styles/blocks/two-columns/__span-accent/two-columns__span-accent.css');
+@import url('../blocks/two-columns/two-columns.css');
+@import url('../blocks/two-columns/__main-text/two-columns__main-text.css');
+@import url('../blocks/two-columns/__brief/two-columns__brief.css');
+@import url('../blocks/two-columns/__paragraph/two-columns__paragraph.css');
+@import url('../blocks/two-columns/__span-accent/two-columns__span-accent.css');
 
 /* подлючаю переиспользуемый блок table */
 
-@import url('../styles/blocks/table/table.css');
-@import url('../styles/blocks/table/__heading/table__heading.css');
-@import url('../styles/blocks/table/__cell/table__cell.css');
-@import url('../styles/blocks/table/__cell/_theme/table__cell_theme_dark.css');
-@import url('../styles/blocks/table/__text/table__text.css');
-@import url('../styles/blocks/table/_theme/table_theme_dark.css');
+@import url('../blocks/table/table.css');
+@import url('../blocks/table/__heading/table__heading.css');
+@import url('../blocks/table/__cell/table__cell.css');
+@import url('../blocks/table/__cell/_theme/table__cell_theme_dark.css');
+@import url('../blocks/table/__text/table__text.css');
+@import url('../blocks/table/_theme/table_theme_dark.css');
 
 /* подлючаю переиспользуемый блок cards */
 
-@import url('../styles/blocks/cards/cards.css');
-@import url('../styles/blocks/cards/__item/cards__item.css');
-@import url('../styles/blocks/cards/__title/cards__title.css');
-@import url('../styles/blocks/cards/__image/cards__image.css');
-@import url('../styles/blocks/cards/__description/cards__description.css');
+@import url('../blocks/cards/cards.css');
+@import url('../blocks/cards/__item/cards__item.css');
+@import url('../blocks/cards/__title/cards__title.css');
+@import url('../blocks/cards/__image/cards__image.css');
+@import url('../blocks/cards/__description/cards__description.css');
 
 /* подлючаю переиспользуемый микс link */
 
-@import url('../styles/blocks/link/link.css');
+@import url('../blocks/link/link.css');
 
 /* подлючаю переиспользуемый блок section-title */
 
-@import url('../styles/blocks/section-title/section-title.css');
-@import url('../styles/blocks/section-title/_theme/section-title_theme_dark.css');
+@import url('../blocks/section-title/section-title.css');
+@import url('../blocks/section-title/_theme/section-title_theme_dark.css');
 
 /* подлючаю переиспользуемый блок section-subtitle */
 
-@import url('../styles/blocks/section-subtitle/section-subtitle.css');
-@import url('../styles/blocks/section-subtitle/_theme/section-subtitle_theme_dark.css');
+@import url('../blocks/section-subtitle/section-subtitle.css');
+@import url('../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css');
 
 /* подлючаю переиспользуемый микс rotation */
 
-@import url('../styles/blocks/rotation/rotation.css');
+@import url('../blocks/rotation/rotation.css');
 
 /* подлючаю переиспользуемый микс logo */
 
-@import url('../styles/blocks/logo/logo.css');
-@import url('../styles/blocks/logo/_place/logo_place_header.css');
-@import url('../styles/blocks/logo/_place/logo_place_footer.css');
+@import url('../blocks/logo/logo.css');
+@import url('../blocks/logo/_place/logo_place_header.css');
+@import url('../blocks/logo/_place/logo_place_footer.css');
